tests/requests/invalid/rfc9110_field_value_ctl_del_01.http
GET /foo HTTP/1.1\r\n
Host: example.com\r\n
X-Value: plain\x7finjected\r\n
\r\n
